# pyproject-local-kernel

./: .gitignore  404.html  CHANGELOG.md  FAQ.md  LICENSE.md  Makefile  README.md  index.html  mkdocs.yml  nox  noxfile.py  pyproject.toml  setup.py
.github/workflows/: build-release.yaml  ci.yaml  docs.yml
CHANGELOG/: index.html
FAQ/: index.html
data/: kernel.json  kernel_use_venv.json
docs/: .gitignore
docs/static/: extra.css
example/my-jupyterlab/: README.md  pyproject.toml  run.sh
example/my-notebook/: README.md  notebook_with_pyproject_kernel.ipynb  notebook_with_pyproject_kernel.py  pyproject.toml  using_rye_kernel.py
overrides/partials/: header.html  pypi_badge.html
ryeish_kernel/: __main__.py  kernelspec.py
search/: search_index.json
src/pyproject_local_kernel/: __init__.py  __main__.py  _configdata.py  _identify.py  configdata.py  jpy_vars.py  main.py  parentpoller.py  provisioner.py  signal.py
src/ryeish_kernel/: __main__.py
tests/: conftest.py  hatch_config.toml  test_identify.py  test_jupyter_kernel.py  test_provisioner.py  testlib.py
tests/identify/config_cmd/: pyproject.toml
tests/identify/config_cmd_string/: pyproject.toml
tests/identify/config_no_project_section/: pyproject.toml
tests/identify/custom/: pyproject.toml
tests/identify/custom_broken/: pyproject.toml
tests/identify/custom_broken2/: pyproject.toml
tests/identify/custom_string/: pyproject.toml
tests/identify/fallback/: pyproject.toml
tests/identify/hatch/: pyproject.toml
tests/identify/invalid_toml/: pyproject.toml
tests/identify/no_project_section/: pyproject.toml
tests/identify/pdm/: pyproject.toml
tests/identify/poetry/: pyproject.toml
tests/identify/rye/: pyproject.toml
tests/identify/unknown/: pyproject.toml
tests/identify/use-venv/: pyproject.toml
tests/identify/uv/: pyproject.toml
tests/server-client/: .gitignore  notebook-interrupt.py  notebook_use_venv.py  setup_run.sh
tests/server-client/client/: notebook.py  pyproject.toml
tests/server-client/client-hatch/: pyproject.toml
tests/server-client/client-interrupt/: pyproject.toml
tests/server-client/client-nokernel/: pyproject.toml
tests/server-client/client-rye/: pyproject.toml
tests/server-client/client-uv/: pyproject.toml
tests/server-client/client-venv/: pyproject.toml
tests/server-client/server/: pyproject.toml
tools/build-tool/: pyproject.toml
tools/mkdocs-dev/: pyproject.toml
tools/mkdocs-tool/: pyproject.toml
tools/py-build/: pyproject.toml
x/: pyproject.toml
