[project]
name = "pyproject-local-kernel"
version = "0.12.1"
description = "Python Jupyter kernel using project/environment manangers like Rye, Uv, PDM, Poetry, Hatch etc."
authors = [
    { name = "Ulrik Sverdrup", email = "ulrik.sverdrup@gmail.com" }
]
dependencies = [
    "jupyter-client>=8.6.3",
    "tomli>=2.0.1; python_version < '3.11'",
    "traitlets>=5.14.3",
]
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">= 3.8"
keywords = ["Interactive", "Interpreter", "Jupyter", "Pyproject"]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://bluss.github.io/pyproject-local-kernel/"
Repository = "https://github.com/bluss/pyproject-local-kernel"

[project.scripts]
pyproject_local_kernel = "pyproject_local_kernel.main:main"

[project.entry-points."jupyter_client.kernel_provisioners"]
pyproject-local-kernel-provisioner = "pyproject_local_kernel.provisioner:PyprojectKernelProvisioner"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
    "nox>=2024.4.15",
    "psutil>=6.0.0",
]
python-preference = "only-managed"

cache-keys = [{ file = "data/*.json" }, { file = "src/**/*.py" }]

[tool.uv.workspace]
members = []
exclude = ["tools/**", "tests/**", "example/**"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
exclude = [
    "/example",
    "/.github",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyproject_local_kernel"]

[tool.hatch.build.targets.wheel.shared-data]
"./data/kernel.json" = "share/jupyter/kernels/pyproject_local_kernel/kernel.json"
"./data/kernel_use_venv.json" = "share/jupyter/kernels/pyproject_local_kernel_use_venv/kernel.json"


## Tests ##
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--import-mode=importlib",
]
filterwarnings = [
    "ignore:Jupyter is migrating its paths",
]

## Project tools ##
[tool.ruff]
output-format = "grouped"
exclude = ["example", "tests/identify", "tests/server-client"]
line-length = 150
lint.ignore = ["E741"]


## Editors and other tools ##
[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "standard"
reportUnusedParameter = false

[tool.pyproject-local-kernel]
