[project]
name = "my-jupyterlab"
version = "0.3.0"
description = "Jupyterlab install"
authors = [
    { name = "Author", email = "author@example.com" }
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Private :: Do Not Upload",
]

dependencies = [
    "jupyterlab",
    "jupytext>=1.16.1",
    "pyproject-local-kernel>=0.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.rye]
managed = true
universal = true
virtual = true

[tool.uv.sources]
pyproject-local-kernel = { path = "../..", editable = true }
