[project]
name = "my-jupyterlab"
version = "0.4.0"
description = "Jupyterlab install"
authors = [
    { name = "Author", email = "author@example.com" }
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Private :: Do Not Upload",
]

dependencies = [
    "jupyterlab>=4.2",
    "jupytext>=1.16.1",
    "pyproject-local-kernel>=0.8.0",
]

[tool.uv.workspace]

[tool.uv.sources]
pyproject-local-kernel = { path = "../..", editable = true }
