[project]
name = "my-notebook"
version = "0.2.0"
description = "Notebook project with custom deps"
authors = [
    { name = "Author", email = "author@example.com" }
]
dependencies = [
    "ipykernel>=6.29.3",
    "numpy>=1.26.4",
]
readme = "README.md"
requires-python = ">= 3.10"
classifiers = [
    "Private :: Do Not Upload",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.rye]
managed = true
universal = true
virtual = true
