[project]
name = "build-tool"
version = "0.1.0"
description = "Lockfile for build package for creating the release."
requires-python = ">=3.11"
dependencies = [
    "build>=1.2.1",
]
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.uv.workspace]
