[project]
name = "rye"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Author", email = "author@example.com" }
]
dependencies = []
requires-python = ">= 3.0"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.pyproject-local-kernel.python-cmd]
a=1
b=2
