[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "client-hatch"
version = "1"
description = ''
requires-python = ">=3.8"
keywords = []
authors = [
]
dependencies = [
    "ipykernel>=6",
    "jinja2",
]

[project.urls]

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.build.targets.wheel]
bypass-selection = true
