[project]
name = "client-uv"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ulrik Sverdrup", email = "ulrik.sverdrup@gmail.com" }
]
dependencies = [
    "jinja2>=3.1.3",
    "ipykernel>=6.29.5",
]
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.uv]
dev-dependencies = []
[tool.uv.workspace]

[tool.pyproject-local-kernel]
