[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ulrik Sverdrup", email = "ulrik.sverdrup@gmail.com" }
]
dependencies = [
    "papermill>=2.6.0",
    "jupytext>=1.16.3",
    "pyproject-local-kernel",
]
classifiers = [
    "Private :: Do Not Upload",
]

[project.optional-dependencies]
kernel = [
    "ipykernel>=6.29.5",
]
nbconvert = [
    # nbconvert pulls in ipykernel as well
    "nbconvert>=7.16.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.uv]
managed = true
package = false

[tool.uv.workspace]
[tool.uv.sources]
pyproject-local-kernel = { path = "../../../" }
